Clean up Java 9 deprecations