@@ -24,6 +24,7 @@ import java.lang.ref.WeakReference;
 
 
 import spiralcraft.util.ClassLoaderLocal;
+import spiralcraft.util.lang.ClassUtil;
 import spiralcraft.util.refpool.URIPool;
 import spiralcraft.util.string.StringPool;
 
@@ -157,7 +158,7 @@ public class TypeResolver
         factories.add
           ((TypeFactory) Class.forName
             (className,true,Thread.currentThread().getContextClassLoader())
-              .newInstance()
+              .getDeclaredConstructor().newInstance()
           );
       }
       catch (Exception x)
